--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -542,6 +542,7 @@ h4 {
 	font-size: 30px !important;
 }
 
+
 /* ACTIVITIES CHART */
 
 svg {
@@ -557,15 +558,25 @@ svg {
 	bottom: 0;
 }
 
-.timeline .track-container {
+.timeline .track-col {
 	position: absolute;
 	left: 100px;
 	right: 100px;
+	top: 0;
+	bottom: 0;
+	background: transparent;
+}
+
+.timeline .track-container {
+	position: absolute;
+	left: 0;
+	right: 0;
 	top: 50%;
 	transform: translateY(-50%);
 }
 
 .timeline .track,
+.timeline .track-preview,
 .timeline .track-indicator {
 	width: 100%;
 	height: 2px;
@@ -576,6 +587,14 @@ svg {
 .timeline .track {
 	background: $windowBackgroundColor;
 	z-index: 0;
+}
+
+.timeline .track-preview {
+	width: 0px;
+	height: 4px;
+	background: $labelColor;
+	z-index: 5;
+	transform: translateY(-1px);
 }
 
 .timeline .track-indicator {
@@ -597,6 +616,7 @@ svg {
 	top: -4px;
 	left: 50%;
 	border-radius: 50%;
+	z-index: 10;
 }
 
 .timeline .thumb:hover {
@@ -632,6 +652,7 @@ svg {
 .no-transition {
 	transition: none !important;
 }
+
 
 /* DIRECTIVES */
 
@@ -945,6 +966,160 @@ input.form-control:focus {
 	transform: translate(-50%, -100%);
 }
 
+.activities-list {}
+
+
+/*
+.activities-list .connection {
+	position: absolute;
+	top: 0;
+	left: 27px;
+	bottom: 0;
+	width: 2px;
+	background: $headerBackgroundColor;
+	background: #E96F02;
+	z-index: -10;
+	display: none;
+}
+*/
+
+.activities-list label {
+	margin: 0;
+}
+
 .activity-header {
-	margin-bottom: 10px;
+	position: relative;
+	padding: 8px 0;
+	line-height: 28px;
+}
+
+.activity-header .agent {
+	display: block;
+	width: 28px;
+	height: 28px;
+	background: $headerBackgroundColor;
+	background: #E96F02;
+	border-radius: 50%;
+	margin: 0 15px;
+	float: left;
+	overflow: hidden;
+}
+
+.activity-header .agent img {
+	width: 28px;
+	height: auto;
+}
+
+.activitiy-header .time {
+	vertical-align: middle;
+}
+
+.influences-list {
+	display: block;
+	position: relative;
+}
+
+.influences-list a {
+	display: block;
+	line-height: 22px;
+	vertical-align: middle;
+	margin-bottom: 0 !important;
+}
+
+
+/*
+.influences-list a .node {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	line-height: 10px;
+	margin-left: 8px;
+	margin-right: 8px;
+	text-align: center;
+	vertical-align: middle;
+	background: transparent;
+	background: #E96F02;
+	border-radius: 50%;
+	border: none;
+}
+*/
+
+.influences-list a i.zmdi {
+	display: inline-block;
+	text-align: center;
+	width: 26px;
+	font-size: 16px;
+	color: white;
+	margin: 0;
+}
+
+.influences-list .type {
+	color: white;
+}
+
+.influences-list .time {}
+
+.comment {
+	position: relative;
+	margin: 0 0 10px 32px;
+}
+
+.tip {
+	width: 0px;
+	height: 0px;
+	position: absolute;
+	background: transparent;
+	border: 5px solid $headerBackgroundColor;
+}
+
+.tip.tip-right {
+	top: 0px;
+	right: -10px;
+	border-right-color: transparent;
+	border-bottom-color: transparent;
+}
+
+.tip.tip-left {
+	top: 0;
+	left: -10px;
+	border-left-color: transparent;
+	border-bottom-color: transparent;
+}
+
+.comment .message {
+	background: $headerBackgroundColor;
+	padding: 10px;
+	color: white;
+	min-height: 2em;
+}
+
+.comment .message .time {
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+	z-index: 0;
+}
+
+.comment-box {
+	margin: 0 25px;
+}
+
+.comment-box textarea {
+	line-height: 1.3em;
+	border: none;
+	width: 100%;
+	min-height: 75px;
+	color: black;
+	vertical-align: top !important;
+	text-align: left;
+	padding: 5px;
+}
+
+.comment-box textarea,
+.comment-box input {
+	margin: 5px;
+}
+
+.comment-box input[type=button] {
+	float: right;
 }
